<resources>
    <string name="app_name">MadLevel3Task1</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome">Welcome to the Games Rating app!</string>
    <string name="click_start">Click START to start rating :)</string>
    <string name="start">Start</string>
    <string name="rate_game">Rate the following game from 1 to 5 stars!</string>
    <string name="game_name">Insert game name</string>
    <string name="to_summary">To summary</string>
    <string name="start_over">Start over</string>
</resources>