<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RatingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="269dp"
        android:layout_marginBottom="268dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvRateGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_game"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvGameName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/game_name"
            tools:layout_editor_absoluteX="153dp"
            tools:layout_editor_absoluteY="78dp"
            tools:text="@string/game_name" />

        <RatingBar
            android:id="@+id/rbGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="83dp"
            tools:layout_editor_absoluteY="127dp" />

        <Button
            android:id="@+id/btnToSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/to_summary"
            tools:layout_editor_absoluteX="278dp"
            tools:layout_editor_absoluteY="60dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>